--- a/app/src/main/res/drawable/btn_stroke.xml
+++ b/app/src/main/res/drawable/btn_stroke.xml
@@ -6,7 +6,7 @@
     <corners
         android:radius="10dp" />
     <solid
-        android:color="@color/white"/>
+        android:color="@color/transparent"/>
     <stroke android:color="@color/black"
         android:width = "1.2dp"/>
 
