--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid
-        android:color="@color/white"/>
+        android:color="?android:textColor"/>
+
     <corners
         android:radius="18dp" />
     <padding
@@ -9,5 +10,6 @@
         android:top="10dp"
         android:right="10dp"
         android:bottom="10dp" />
-    <stroke android:width="0.7dp"/>
+
+    <stroke android:width="1dp"/>
 </shape>
