--- a/app/src/main/res/drawable/ic_date_17.xml
+++ b/app/src/main/res/drawable/ic_date_17.xml
@@ -5,10 +5,10 @@
     android:viewportHeight="512">
   <path
       android:pathData="M321,17.2c-25.4,0.8 -29.7,1.1 -31.3,2.6 -4.1,3.7 -4,4.8 1.3,8.2l4.9,3.2 20.7,-1.2c20.1,-1.1 32.1,-0.7 35.7,1.2 1.3,0.7 1.7,2.2 1.7,7.4 0,9.5 -2.6,32.4 -7.1,62.7 -2.1,14.8 -7.7,61.2 -12.4,103 -17.9,161.9 -25.8,211.3 -42,264.2 -2.6,8.2 -4.9,17.9 -5.2,21.5l-0.5,6.5 4,3.8c3.2,3.1 4.4,3.7 6.6,3.1 6.3,-1.6 11.5,-12.7 12.5,-27.4 0.4,-5.3 1,-10 1.3,-10.5 4.6,-7.4 31.9,-189.1 51.2,-340.5 4.1,-32 5.3,-44.6 6.2,-66.5 0.4,-10.1 1.3,-18.7 2.5,-23.3 1.6,-6.4 1.7,-7.7 0.5,-10 -3.2,-6.2 -8.8,-9.3 -16.4,-9 -2.6,-0 -18,0.5 -34.2,1z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="?android:textColor"
+      android:strokeColor="?android:textColor"/>
   <path
       android:pathData="M122.5,28.7c-16.2,2 -22.5,4.4 -22.5,8.5 0.1,5.9 3.7,7.2 18.1,6.3 19.4,-1.1 27.1,2.4 31.7,14.7 2.9,7.8 4.2,19.2 3.6,32.8 -0.4,8.1 0.9,33.9 4.5,87.5 11,165 11.9,181.4 12.7,244 0.7,47.1 0.5,48.9 -4.9,52.9 -2.6,1.9 -4,2.1 -15.1,1.9 -12.3,-0.2 -12.3,-0.2 -13.5,2.3 -2.4,5.4 -0.5,11.6 4.3,13.4 2.3,0.8 83.9,-1.5 88.8,-2.6 5.7,-1.2 8.6,-8.4 5.3,-13.1 -2.6,-3.7 -8.4,-4.6 -28.8,-4.2l-18.7,0.4 -0.5,-29c-0.2,-16 -0.9,-32.8 -1.5,-37.5 -0.7,-4.7 -1.1,-17.7 -1,-29 0.1,-20.4 -1.2,-45.2 -5,-98.2 -3.2,-43.4 -5,-76.1 -5,-90.8 0,-19.4 -1.6,-42.1 -5.5,-78 -4.3,-40.1 -4.8,-50.2 -3.5,-62.3 0.9,-9 0.8,-10.3 -0.9,-14.2 -1.1,-2.4 -2.8,-4.8 -3.9,-5.4 -1.9,-1 -31.3,-1.3 -38.7,-0.4z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="?android:textColor"
+      android:strokeColor="?android:textColor"/>
 </vector>
