--- a/app/src/main/res/drawable/input_field.xml
+++ b/app/src/main/res/drawable/input_field.xml
@@ -11,7 +11,7 @@
         android:right="10dp"
         android:bottom="4dp" />
     <solid
-        android:color="@color/white"
+        android:color="@color/transparent"
             />
     <stroke
         android:width="0.7dp"
