--- a/app/src/main/res/drawable/track_interest.xml
+++ b/app/src/main/res/drawable/track_interest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item android:state_checked="false">
         <shape android:layout_width="wrap_content" android:layout_height="wrap_content" android:shape="rectangle">
             <corners android:radius="100sp" />
-            <stroke android:width="0.8dp" android:color="@color/black" />
-            <solid android:color="#f5f5f5"/>
+            <stroke android:width="0.8dp" android:color="@color/grey" />
+            <solid android:color="@color/transparent"/>
         </shape>
     </item>
 
     <item android:state_checked="true">
-        <shape android:layout_width="wrap_content" android:shape="rectangle">
-            <solid android:color="#f28500" />      <!--color name="color_green">#3bd391</color-->
+        <shape android:layout_width="wrap_content" android:shape="rectangle" >
+            <solid android:color="@color/interest_color_dark" />      <!--color name="color_green">#3bd391</color-->
             <corners android:radius="100sp" />
-            <stroke android:color="#ffcc00" android:width="1.5dp"/>
+            <stroke android:color="@color/interest_color_light" android:width="1.5dp"/>
         </shape>
     </item>
 </selector>
