--- a/app/src/main/res/drawable/track_ordinary.xml
+++ b/app/src/main/res/drawable/track_ordinary.xml
@@ -4,16 +4,16 @@
     <item android:state_checked="false">
         <shape android:layout_width="wrap_content" android:layout_height="wrap_content" android:shape="rectangle">
             <corners android:radius="100sp" />
-            <stroke android:width="0.8dp" android:color="@color/black" />
-            <solid android:color="#f5f5f5"/>
+            <stroke android:width="0.8dp" android:color="@color/grey" />
+            <solid android:color="@color/transparent"/>
         </shape>
     </item>
 
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="#70A6D3"/>      <!--color name="color_green">#3bd391</color-->
+            <solid android:color="@color/ordinary_color_dark"/>      <!--color name="color_green">#3bd391</color-->
             <corners android:radius="100sp"/>
-            <stroke android:color="#bbdefb" android:width="1.5dp"/>
+            <stroke android:color="@color/ordinary_color_light" android:width="1.5dp"/>
         </shape>
     </item>
 </selector>
