--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -2,25 +2,37 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="false"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    style = "@style/CustomConstraintLayout.Activity"
+    android:layout_height="match_parent">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
+    <nl.joery.animatedbottombar.AnimatedBottomBar
         android:id="@+id/work_b_nav"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        app:itemIconTint="@drawable/menu_selector"
-        app:itemIconSize="48dp"
-        android:background="@color/white"
+        style = "@style/CustomNavBar"
+        class  = "nl.joery.animatedbottombar.AnimatedBottomBar"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:fitsSystemWindows="false"
+        android:layout_margin="0dp"
+        app:abb_selectedTabType="text"
+        app:abb_indicatorAppearance="round"
+        app:abb_textAppearance="@style/CustomNavText"
+        app:abb_indicatorMargin="24dp"
+        app:abb_indicatorHeight="4dp"
+        app:abb_tabs="@menu/bottom_menu"
+        app:abb_tabColorSelected="?android:strokeColor"
+        app:abb_tabColor="?android:colorAccent"
+        app:abb_iconSize="40dp"
+        app:abb_indicatorColor="?android:colorPrimary"
+        app:abb_indicatorLocation="bottom"
+        app:abb_selectedIndex="0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_menu" />
+        app:layout_constraintTop_toBottomOf="@id/work_fragment_holder"/>
 
     <FrameLayout
         android:id = "@+id/work_fragment_holder"
+        style="@style/CustomFrameLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/work_b_nav"
