--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -6,10 +6,12 @@
     android:layout_height="wrap_content"
     android:elevation="0dp"
     android:padding="5dp"
+    android:background="@color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/calendar_btn_day"
+        style = "@style/CustomRoundButton"
         android:stateListAnimator="@null"
         android:layout_width="33dp"
         android:layout_height="33dp"
