--- a/app/src/main/res/layout/custom_friend_list_row.xml
+++ b/app/src/main/res/layout/custom_friend_list_row.xml
@@ -18,18 +18,19 @@
         android:padding = "3dp">
         <TextView
             android:id="@+id/friend_list_name_txt"
+            style="@style/CustomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Stas"
             android:textSize="22dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
             android:id="@+id/friend_list_surname_txt"
+            style="@style/CustomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sidorov"
@@ -37,7 +38,6 @@
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/friend_list_name_txt"
             />
@@ -107,6 +107,7 @@
 
     <TextView
         android:id="@+id/friend_list_last_notion_txt"
+        style="@style/CustomTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/friend_list_name_layout"
@@ -116,6 +117,5 @@
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
         android:text="Хороший день"
-        android:textColor="@color/black"
         android:textSize="16dp" />
 </RelativeLayout>
