--- a/app/src/main/res/layout/custom_invite_list_row.xml
+++ b/app/src/main/res/layout/custom_invite_list_row.xml
@@ -45,18 +45,19 @@
         android:padding = "3dp">
         <TextView
             android:id="@+id/invite_list_name_txt"
+            style="@style/CustomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Stas"
             android:textSize="22dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
             android:id="@+id/invite_list_surname_txt"
+            style="@style/CustomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sidorov"
@@ -64,7 +65,6 @@
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/invite_list_name_txt"
             />
@@ -77,7 +77,6 @@
             android:layout_marginTop="2dp"
             android:textSize="22dp"
             android:fontFamily="@font/my_written"
-
             android:letterSpacing="0.1"
             android:textColor="#787878"
             app:layout_constraintTop_toBottomOf="@id/invite_list_name_txt"
