--- a/app/src/main/res/layout/dialog_add_friend.xml
+++ b/app/src/main/res/layout/dialog_add_friend.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/dialog_background">
+    android:background="@drawable/dialog_background"
+    android:clipToOutline="true">
 
     <EditText
         android:id="@+id/add_text_email_field"
+        style = "@style/CustomEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/input_field"
         android:ems="10"
         android:fontFamily="@font/my_written"
         android:textColorHint="#686868"
@@ -32,7 +33,7 @@
 
     <Button
         android:id="@+id/add_find_btn"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        style="@style/CustomTextButtonActive"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
@@ -40,7 +41,6 @@
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="20dp"
         android:text="@string/find_btn"
-        android:textColor="@color/black"
         android:textAllCaps="false"
         android:textSize="24dp"
         android:textStyle="normal"
