--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,57 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style = "@style/CustomFrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmentCalendar">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/progress_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#A8FFFFFF"
-        android:translationZ="8dp"
-        tools:visibility="gone">
-
-        <ProgressBar
-            android:id="@+id/main_progress_bar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:indeterminateTint="#f0989f"
-            android:progressDrawable="@drawable/progres_bar_style"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/progress_layout_calendar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/cal_btn_cur_year"
-        android:layout_above="@id/cal_btn_cur_mth"
-        android:background="#A8FFFFFF"
-        android:translationZ="0dp"
-        tools:visibility="visible">
-
-        <ProgressBar
-            android:id="@+id/main_progress_bar_calendar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:indeterminateTint="#f0989f"
-            android:progressDrawable="@drawable/progres_bar_style"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    tools:context=".FragmentCalendar"
+    >
 
 
     <RelativeLayout
@@ -83,6 +38,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/calendar_btn_day"
+            style="@style/CustomRoundButton"
             android:layout_marginTop="70dp"
             android:layout_gravity="center_horizontal"
             android:layout_width="140dp"
@@ -105,25 +61,24 @@
 
     <Button
         android:id="@+id/cal_btn_prev_year"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        style="@style/CustomTextButtonInactive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/cur_day_constraint_btn"
         android:layout_alignParentLeft="true"
         android:layout_gravity="center|left"
-        android:gravity="left|center_vertical"
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/my_written"
+        android:gravity="left|center_vertical"
         android:text="2021"
         android:textAllCaps="false"
-        android:textColor="#787878"
         android:textSize="24dp"
         android:textStyle="normal" />
 
     <Button
         android:id="@+id/cal_btn_cur_year"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        style="@style/CustomTextButtonActive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/cur_day_constraint_btn"
@@ -133,13 +88,12 @@
         android:fontFamily="@font/my_written"
         android:text="2022"
         android:textAllCaps="false"
-        android:textColor="@color/black"
         android:textSize="24dp"
         android:textStyle="normal" />
 
     <Button
         android:id="@+id/cal_btn_next_year"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        style="@style/CustomTextButtonInactive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/cur_day_constraint_btn"
@@ -150,13 +104,12 @@
         android:gravity="right|center_vertical"
         android:text="2023"
         android:textAllCaps="false"
-        android:textColor="#787878"
         android:textSize="24dp"
         android:textStyle="normal" />
 
     <Button
         android:id="@+id/cal_btn_prev_mth"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        style="@style/CustomTextButtonInactive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -164,16 +117,15 @@
         android:layout_marginStart="40dp"
         android:layout_marginBottom="40dp"
         android:fontFamily="@font/my_written"
-        android:text="Previous"
         android:gravity="left|center_vertical"
+        android:text="Previous"
         android:textAllCaps="false"
-        android:textColor="#787878"
         android:textSize="24dp"
         android:textStyle="normal" />
 
     <Button
         android:id="@+id/cal_btn_cur_mth"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        style="@style/CustomTextButtonActive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -182,13 +134,12 @@
         android:fontFamily="@font/my_written"
         android:text="Current"
         android:textAllCaps="false"
-        android:textColor="@color/black"
         android:textSize="24dp"
         android:textStyle="normal" />
 
     <Button
         android:id="@+id/cal_btn_next_mth"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        style="@style/CustomTextButtonInactive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -197,12 +148,59 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp"
         android:fontFamily="@font/my_written"
-        android:text="Next"
         android:gravity="right|center_vertical"
+        android:text="Next"
         android:textAllCaps="false"
-        android:textColor="#787878"
         android:textSize="24dp"
         android:textStyle="normal" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/progress_layout_calendar"
+        style="@style/CustomProgressBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/cal_btn_cur_mth"
+        android:layout_below="@id/cal_btn_cur_year"
+        tools:visibility="visible"
+        android:elevation="0dp">
+
+        <ProgressBar
+            android:id="@+id/main_progress_bar_calendar"
+            style="@style/customProgressBarStyle"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:indeterminateTint="#f0989f"
+            android:progressDrawable="@drawable/progres_bar_style"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/progress_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style = "@style/CustomProgressBarLayout"
+        tools:visibility="visible">
+
+        <ProgressBar
+            android:id="@+id/main_progress_bar"
+            style="@style/customProgressBarStyle"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:indeterminateTint="#f0989f"
+            android:progressDrawable="@drawable/progres_bar_style"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </RelativeLayout>
