--- a/app/src/main/res/layout/fragment_current_day.xml
+++ b/app/src/main/res/layout/fragment_current_day.xml
@@ -2,32 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style = "@style/CustomFrameLayout"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
     tools:context=".FragmentCurrentDay">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/progress_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#A8FFFFFF"
-        android:translationZ="8dp"
-        tools:visibility="gone">
-
-        <ProgressBar
-            android:id="@+id/main_progress_bar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:indeterminateTint="#f0989f"
-            android:progressDrawable="@drawable/progres_bar_style"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cur_day_constraint_btn"
@@ -39,13 +19,12 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cur_btn_day"
+            style="@style/CustomRoundButton"
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
-
             android:background ="@drawable/rounded_day"
-
             android:fontFamily="@font/my_written"
             android:gravity="center"
             android:paddingEnd="0dp"
@@ -57,6 +36,7 @@
 
         <TextView
             android:id="@+id/cur_day_answer_txt"
+            style = "@style/CustomTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -105,12 +85,12 @@
 
             <TextView
                 android:id="@+id/cur_day_interest_txt"
+                style="@style/CustomTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:fontFamily="@font/my_written"
                 android:text="@string/interesting_field_cur"
-                android:textColor="@color/black"
                 android:textSize="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/cur_day_switch_interest"
@@ -145,11 +125,11 @@
 
             <TextView
                 android:id="@+id/cur_day_productive_txt"
+                style="@style/CustomTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/my_written"
                 android:text="@string/productive_field_cur"
-                android:textColor="@color/black"
                 android:textSize="24dp"
                 android:gravity="left"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -170,6 +150,7 @@
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/cur_day_switch_ordinary"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="false"
@@ -182,12 +163,12 @@
 
             <TextView
                 android:id="@+id/cur_day_ordinary_txt"
+                style = "@style/CustomTextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="18dp"
                 android:fontFamily="@font/my_written"
                 android:text="@string/ordinary_field_cur"
-                android:textColor="@color/black"
                 android:textSize="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/cur_day_switch_ordinary"
@@ -204,7 +185,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/cur_day_save_btn"
-        android:layout_below="@id/cur_day_constraint_checkers"
+        android:layout_below="@+id/cur_day_constraint_checkers"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
@@ -219,8 +200,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:backgroundTint="@color/black"
+            android:fitsSystemWindows="true"
             android:fontFamily="@font/my_written"
-            android:gravity="center_horizontal|bottom"
+            android:gravity="center_horizontal|top"
             android:hint="@string/write_note_question"
             android:inputType="textMultiLine"
             android:lineSpacingExtra="5dp"
@@ -230,28 +212,50 @@
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.157"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/cur_day_save_btn"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        style="@style/CustomTextButtonActive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom ="10dp"
+        android:layout_marginBottom="10dp"
+        android:fitsSystemWindows="false"
         android:fontFamily="@font/my_written"
         android:gravity="center_horizontal"
         android:text="@string/save_btn"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
         android:textSize="32dp"
         android:textStyle="normal" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/progress_layout"
+        style = "@style/CustomProgressBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/main_progress_bar"
+            style="@style/customProgressBarStyle"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:indeterminateTint="#f0989f"
+            android:progressDrawable="@drawable/progres_bar_style"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </RelativeLayout>
