optimized some code

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -60,7 +60,10 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="8dp"
         android:overScrollMode="never"
+        app:rippleColor="@android:color/transparent"
         android:stateListAnimator="@null"
+        app:tabRippleColor="@null"
+        app:tabBackground="@android:color/transparent"
         android:scrollbars="none"
         android:visibility="visible"
         tools:listitem="@layout/custom_friend_list_row" >
@@ -78,6 +81,9 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="8dp"
         android:stateListAnimator="@null"
+        app:tabRippleColor="@null"
+        app:tabBackground="@android:color/transparent"
+        app:rippleColor="@android:color/transparent"
         android:overScrollMode="never"
         android:scrollbars="none"
         android:visibility="invisible"
