--- a/app/src/main/res/layout/custom_friend_list_row.xml
+++ b/app/src/main/res/layout/custom_friend_list_row.xml
@@ -6,56 +6,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/list_view_style"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp">
+    android:paddingTop="10dp"
+    app:rippleColor="@android:color/transparent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id = "@+id/friend_list_name_layout"
+        android:id="@+id/friend_list_name_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:padding = "3dp">
+        android:layout_centerHorizontal="true"
+        android:padding="3dp">
+
         <TextView
             android:id="@+id/friend_list_name_txt"
             style="@style/CustomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stas"
-            android:textSize="22dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:text="ARENCHICK"
+            android:textSize="22sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/friend_list_surname_txt"
             style="@style/CustomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sidorov"
-            android:textSize="22sp"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="ATYAN"
+            android:textSize="22sp"
             app:layout_constraintStart_toEndOf="@id/friend_list_name_txt"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/friend_list_nickname_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Shiz"
             android:layout_marginTop="2dp"
-            android:textSize="22dp"
             android:fontFamily="@font/my_written"
             android:gravity="center"
             android:letterSpacing="0.1"
+            android:text="Shiz"
             android:textColor="#787878"
-            app:layout_constraintTop_toBottomOf="@id/friend_list_name_txt"
+            android:textSize="22dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/friend_list_name_txt" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -69,7 +68,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="22dp"
         android:layout_toLeftOf="@id/friend_list_percentages_interest_txt"
-
+        android:layout_below="@id/friend_list_name_layout"
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
         android:text="50%"
@@ -80,10 +79,11 @@
         android:id="@+id/friend_list_percentages_interest_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/friend_list_name_layout"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="22dp"
-        android:layout_toLeftOf="@id/friend_list_percentages_ordinary_txt"
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
         android:text="25%"
@@ -94,11 +94,11 @@
         android:id="@+id/friend_list_percentages_ordinary_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical|right"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="22dp"
-        android:layout_marginRight="30dp"
+        android:layout_toRightOf="@id/friend_list_percentages_interest_txt"
+        android:layout_below="@id/friend_list_name_layout"
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
         android:text="25%"
@@ -110,7 +110,7 @@
         style="@style/CustomTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/friend_list_name_layout"
+        android:layout_below="@id/friend_list_percentages_interest_txt"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
