--- a/app/src/main/res/layout/custom_invite_list_row.xml
+++ b/app/src/main/res/layout/custom_invite_list_row.xml
@@ -1,87 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/list_view_style"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp">
-
-    <ImageButton
-        android:id="@+id/invite_accept_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="50dp"
-        android:layout_toLeftOf="@id/invite_decline_btn"
-        android:background="?attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:src="@drawable/ic_baseline_check_24" />
-    <ImageButton
-        android:id="@+id/invite_decline_btn"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:layout_marginRight="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:layout_centerVertical="true"
-        android:background="?attr/selectableItemBackground"
-        android:src = "@drawable/ic_baseline_close_24"
-        android:layout_marginLeft="50dp"
-        android:layout_alignParentRight="true"/>
+    android:paddingTop="10dp"
+    app:rippleColor="@android:color/transparent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id = "@+id/invite_list_name_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="5dp"
-        android:padding = "3dp">
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/invite_list_name_layout">
+
+        <ImageButton
+            android:id="@+id/invite_decline_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="35dp"
+            android:background="?attr/selectableItemBackground"
+
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:src="@drawable/ic_baseline_close_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/invite_accept_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="TouchTargetSizeCheck" />
+
+        <ImageButton
+            android:id="@+id/invite_accept_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="35dp"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:src="@drawable/ic_baseline_check_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/invite_decline_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/invite_list_name_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:padding="3dp">
+
         <TextView
             android:id="@+id/invite_list_name_txt"
             style="@style/CustomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stas"
-            android:textSize="22dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:text="Stas"
+            android:textSize="22dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/invite_list_surname_txt"
             style="@style/CustomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sidorov"
-            android:textSize="22sp"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="Sidorov"
+            android:textSize="22sp"
             app:layout_constraintStart_toEndOf="@id/invite_list_name_txt"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/invite_list_nickname_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Shiz"
             android:layout_marginTop="2dp"
-            android:textSize="22dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
+            android:text="Shiz"
             android:textColor="#787878"
-            app:layout_constraintTop_toBottomOf="@id/invite_list_name_txt"
+            android:textSize="22dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/invite_list_name_txt" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
