--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -68,4 +68,8 @@
         <item name="android:background">@color/white</item>
     </style>
 
+    <style name = "StyleText">
+        <item name = "android:textColor">@color/black</item>
+    </style>
+
 </resources>
