--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -7,6 +7,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FragmentFriends">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/popup_constraint_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/popup_message"
+        android:translationZ="10dp"
+        android:translationY="0dp"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:id="@+id/popup_message_field"
+            style="@style/CustomTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
+            android:text="@string/find_unknown_user_message"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -58,6 +84,7 @@
         android:layout_marginRight="40dp"
         android:layout_marginBottom="160dp"
         android:divider="@android:color/transparent"
+        android:listSelector="@drawable/list_view_style"
         android:dividerHeight="8dp"
         android:overScrollMode="never"
         app:rippleColor="@android:color/transparent"
