--- a/app/src/main/res/drawable/input_field.xml
+++ b/app/src/main/res/drawable/input_field.xml
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:exitFadeDuration="240"
+    android:enterFadeDuration="120">
 
-    <corners
-        android:radius="10dp"/>
-    <padding
-        android:left="4dp"
-        android:top="4dp"
-        android:right="10dp"
-        android:bottom="4dp" />
-    <solid
-        android:color="@color/transparent"
-            />
-    <stroke
-        android:width="0.7dp"
-        android:color="@color/black" />
-    </shape>
+    <item android:state_focused="true">
+        <shape android:layout_width="wrap_content" android:layout_height="wrap_content" android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <padding android:bottom="4dp" android:left="10dp" android:right="10dp" android:top="4dp" />
+            <solid android:color="@color/transparent" />
+            <stroke android:width="1dp" android:color="?android:colorAccent" />
+        </shape>
+    </item>
+
+    <item android:state_pressed="true">
+        <shape android:layout_width="wrap_content" android:layout_height="wrap_content" android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <padding android:bottom="4dp" android:left="10dp" android:right="10dp" android:top="4dp" />
+            <solid android:color="@color/transparent" />
+            <stroke android:width="1dp" android:color="?android:colorAccent" />
+        </shape>
+    </item>
+
+    <item>
+        <shape android:shape="rectangle">
+            <corners
+                android:radius="10dp"/>
+            <padding
+                android:left="4dp"
+                android:top="4dp"
+                android:right="10dp"
+                android:bottom="4dp" />
+            <solid
+                android:color="@color/transparent"
+                />
+            <stroke
+                android:width="0.7dp"
+                android:color="@color/black" />
+        </shape>
+    </item>
+</selector>
