--- a/app/src/main/res/drawable/list_view_style.xml
+++ b/app/src/main/res/drawable/list_view_style.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:exitFadeDuration="500"
+    android:enterFadeDuration="500">
 
     <item android:state_focused="true" >
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <solid android:color="#00FFFFFF"/>
-            <stroke android:color="@color/black" android:width="1dp"/>
+            <solid android:color="@color/transparent"/>
+            <stroke android:color="?android:colorAccent" android:width="2dp"/>
         </shape>
-
     </item>
     <item android:state_pressed="true"  >
-        <shape android:shape="rectangle">
+        <shape android:layout_height="match_parent" android:shape="rectangle">
             <corners android:radius="10dp" />
-            <solid android:color="#00FFFFFF"/>
-            <stroke android:color="@color/black" android:width="1dp"/>
+            <solid android:color="@color/transparent" />
+            <stroke android:width="2dp" android:color="?android:colorAccent" />
         </shape>
 
     </item>
-
     <item>
         <shape android:shape="rectangle"  >
             <corners android:radius="10dp" />
-            <solid android:color="#00FFFFFF"/>
-            <stroke android:color="#787878" android:width="1dp"/>
+            <solid android:color="@color/transparent"/>
+            <stroke android:color="@color/black" android:width="1dp"/>
         </shape>
     </item>
 
