--- a/app/src/main/res/drawable/rounded_day_productive.xml
+++ b/app/src/main/res/drawable/rounded_day_productive.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <size
         android:width="65dp"
         android:height="65dp"/>
     <solid
-        android:color="#f0989f"/>
+        android:color="@color/productive_color_light"/>
     <stroke android:color="@color/black"
         android:width = "0.5dp"/>
-
-</shape>
+    </shape>
