--- a/app/src/main/res/layout/custom_invite_list_row.xml
+++ b/app/src/main/res/layout/custom_invite_list_row.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
-            android:background="?attr/selectableItemBackground"
+            android:background="@color/transparent"
 
             android:clickable="true"
             android:focusable="true"
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="35dp"
-            android:background="?attr/selectableItemBackground"
+            android:background="@color/transparent"
             android:clickable="true"
             android:focusable="true"
             android:paddingTop="10dp"
