--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -26,7 +26,9 @@
             android:layout_marginBottom="20dp"
             android:numColumns="7"
             android:scrollbarSize="0dp"
-            android:verticalSpacing="15dp" />
+            android:verticalSpacing="15dp"
+            android:listSelector="@color/transparent"
+            />
     </RelativeLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
