--- a/app/src/main/res/layout/fragment_current_day.xml
+++ b/app/src/main/res/layout/fragment_current_day.xml
@@ -10,43 +10,63 @@
     tools:context=".FragmentCurrentDay">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cur_day_constraint_btn"
-        android:layout_width="wrap_content"
+        android:id="@+id/popup_constraint_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal|top"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/popup_message"
+        android:translationZ="10dp"
+        android:translationY="0dp"
         android:layout_centerHorizontal="true">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/cur_btn_day"
-            style="@style/CustomRoundButton"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="25dp"
-            android:background ="@drawable/rounded_day"
+        <TextView
+            android:id="@+id/textView"
+            style="@style/CustomTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/my_written"
-            android:gravity="center"
-            android:paddingEnd="0dp"
-            android:text="11"
-            android:textSize="100dp"
+            android:letterSpacing="0.1"
+            android:text="@string/popup_success_message"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/cur_btn_day"
+        style="@style/CustomRoundButton"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="70dp"
+        android:background="@drawable/rounded_day"
+        android:fontFamily="@font/my_written"
+        android:gravity="center"
+        android:paddingEnd="0dp"
+        android:stateListAnimator="@null"
+        android:text="11"
+        android:textSize="100dp"
+        android:translationZ="1dp" />
+
         <TextView
             android:id="@+id/cur_day_answer_txt"
-            style = "@style/CustomTextView"
-            android:layout_width="match_parent"
+            style="@style/CustomTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:fontFamily="@font/my_written"
             android:text="@string/cur_day_question"
             android:textSize="32dp"
-            android:fontFamily="@font/my_written"
-            app:layout_constraintTop_toBottomOf="@id/cur_btn_day"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/cur_btn_day"
+            android:layout_marginLeft="40dp"
+            />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -57,7 +77,7 @@
         android:layout_marginLeft="70dp"
         android:layout_marginTop="60dp"
         android:layout_marginRight="70dp"
-        android:layout_below ="@id/cur_day_constraint_btn">
+        android:layout_below ="@id/cur_day_answer_txt">
 
 
 
