--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,6 +44,7 @@
 
     <style name = "CustomRoundButton">
         <item name = "android:textColor" >@color/darkGrey</item>
+        <item name = "android:backgroundTint">@null</item>
     </style>
 
     <style name="CustomBorderedButton">
