--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,17 +78,17 @@
         style="@style/CustomTextButtonActive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/my_written"
         android:text="@string/sign_in_btn"
         android:textAllCaps="false"
         android:textSize="32dp"
         android:textStyle="normal"
-        android:fontFamily="@font/my_written"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.65" />
+        app:layout_constraintTop_toBottomOf="@+id/main_text_password_field"
+         />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/main_reg_btn"
